--- a/KN_Core/Resources/Locale/en.xml
+++ b/KN_Core/Resources/Locale/en.xml
@@ -42,7 +42,7 @@
   <key id="about2" value="If you have any questions or suggestions"/>
   <key id="about3" value="please, contact us at"/>
   <key id="about4" value="trbflxr#8814 or John Sawyer#6915"/>
-  <key id="about5" value="or in the mod's discord (top button)"/>
+  <key id="about5" value="or in the mod's discord"/>
   <key id="about6" value="Also many thanks to"/>
   <key id="about7" value="for their support!"/>
   <key id="about8" value="Mod translated by:"/>
@@ -50,7 +50,7 @@
   <key id="about1v" value="Restart the game for the mod to update automatically."/>
   <key id="about2v" value="If you still see this message after the restart then"/>
   <key id="about3v" value="download and manually install the latest version of the mod"/>
-  <key id="about4v" value="from our discord (top button)"/>
+  <key id="about4v" value="from our discord"/>
   <key id="about5v" value="Current version"/>
   <key id="about6v" value="Target version"/>
 
