--- a/KN_Core/Resources/Locale/fr.xml
+++ b/KN_Core/Resources/Locale/fr.xml
@@ -41,7 +41,7 @@
   <key id="about2" value="Si vous avez des questions ou des suggestions"/>
   <key id="about3" value="s'il vous plaît, contactez-nous"/>
   <key id="about4" value="trbflxr#8814 ou John Sawyer#6915"/>
-  <key id="about5" value="ou sur le discord du mod (boutton du haut)"/>
+  <key id="about5" value="ou sur le discord du mod"/>
   <key id="about6" value="Merci également à"/>
   <key id="about7" value="pour leur soutien!"/>
   <key id="about8" value="Mod traduit par:"/>
@@ -49,7 +49,7 @@
   <key id="about1v" value="Redémarrez le jeu pour que le mod se mette à jour automatiquement."/>
   <key id="about2v" value="Si vous voyez toujours ce message après le redémarrage,"/>
   <key id="about3v" value="télécharger et installer manuellement la dernière version du mod"/>
-  <key id="about4v" value="via notre discord (bouton du haut)"/>
+  <key id="about4v" value="via notre discord"/>
   <key id="about5v" value="Version actuelle"/>
   <key id="about6v" value="Version cible"/>
 
