--- a/KN_Core/Resources/Locale/ita.xml
+++ b/KN_Core/Resources/Locale/ita.xml
@@ -41,7 +41,7 @@
   <key id="about2" value="Se hai qualche domanda o suggerimento,"/>
   <key id="about3" value="puoi contattarci a"/>
   <key id="about4" value="trbflxr#8814 o John Sawyer#6915"/>
-  <key id="about5" value="o nel KiNO Discord (Pulsante in alto)"/>
+  <key id="about5" value="o nel KiNO Discord"/>
   <key id="about6" value="Molte grazie anche a"/>
   <key id="about7" value="per il loro supporto!"/>
   <key id="about8" value="Mod tradotta da:"/>
@@ -49,7 +49,7 @@
   <key id="about1v" value="Riavvia il gioco per far aggiornare la mod automaticamente."/>
   <key id="about2v" value="Se questo messaggio è ancora visibile dopo il riavvio allora"/>
   <key id="about3v" value="Scarica e installa manualmente l'ultima versione della mod"/>
-  <key id="about4v" value="Dal nostro discord (Pulsante in alto)"/>
+  <key id="about4v" value="Dal nostro discord"/>
   <key id="about5v" value="Versione Corrente"/>
   <key id="about6v" value="Versione ideale"/>
 
