--- a/KN_Core/Resources/Locale/jp.xml
+++ b/KN_Core/Resources/Locale/jp.xml
@@ -39,7 +39,7 @@
   <key id="about2" value="もしご質問やご意見があれば"/>
   <key id="about3" value="私たちに連絡してください"/>
   <key id="about4" value="trbflxr#8814 or John Sawyer#6915"/>
-  <key id="about5" value="または mod のディスコード (上のボタン) から連絡してください"/>
+  <key id="about5" value="または mod のディスコード から連絡してください"/>
   <key id="about6" value="以下の方々にも感謝しています"/>
   <key id="about7" value=" "/>
   <key id="about8" value="翻訳者 by:"/>
@@ -47,7 +47,7 @@
   <key id="about1v" value="MODが自動的に更新されるようゲームを再起動してください。"/>
   <key id="about2v" value="再起動してもこのメッセージが表示される場合は"/>
   <key id="about3v" value="最新バージョンのMODをダウンロードして手動でインストールしてください。"/>
-  <key id="about4v" value="最新バージョンのダウンロードはディスコード（上のボタン）から"/>
+  <key id="about4v" value="最新バージョンのダウンロードはディスコード から"/>
   <key id="about5v" value="現在のバージョン"/>
   <key id="about6v" value="対象のバージョン"/>
 
