--- a/KN_Core/Resources/Locale/nl.xml
+++ b/KN_Core/Resources/Locale/nl.xml
@@ -39,7 +39,7 @@
   <key id="about2" value="Als u vragen of suggesties heeft"/>
   <key id="about3" value="Contacteer ons dan aub op"/>
   <key id="about4" value="trbflxr#8814 of John Sawyer#6915"/>
-  <key id="about5" value="Of in de mods discord (bovenste knop)"/>
+  <key id="about5" value="Of in de mods discord"/>
   <key id="about6" value="Trouwens"/>
   <key id="about7" value="heel erg bedankt voor de hulp!"/>
   <key id="about8" value="Mod vertaald door:"/>
@@ -47,7 +47,7 @@
   <key id="about1v" value="Herstart het spel zodat de mod zich automatisch kan updaten."/>
   <key id="about2v" value="Als u did bericht nog steeds ziet na het heropstarten"/>
   <key id="about3v" value="download en installeer de laatste versie van de mod manueel"/>
-  <key id="about4v" value="vanuit onze discord (bovenste knop)"/>
+  <key id="about4v" value="vanuit onze discord"/>
   <key id="about5v" value="Huidige versie"/>
   <key id="about6v" value="Doelwit versie"/>
 
