--- a/KN_Core/Resources/Locale/ru.xml
+++ b/KN_Core/Resources/Locale/ru.xml
@@ -41,7 +41,7 @@
   <key id="about2" value="Если у вас есть какие либо вопросы или пожелания"/>
   <key id="about3" value="пожалуйства свяжитесь с нами"/>
   <key id="about4" value="trbflxr#8814 или John Sawyer#6915"/>
-  <key id="about5" value="или в дискорде мода (кнопка сверху)"/>
+  <key id="about5" value="или в дискорде мода"/>
   <key id="about6" value="Так же большое спасибо игрокам"/>
   <key id="about7" value="за их поддержку!"/>
   <key id="about8" value="Мод перевели:"/>
@@ -49,7 +49,7 @@
   <key id="about1v" value="Перезапустите игру для автоматического обновления."/>
   <key id="about2v" value="Если вы все еще видите это сообщение после перезапуска,"/>
   <key id="about3v" value="то скачайте и вручную установите последнюю версию мода"/>
-  <key id="about4v" value="из оффицального дискорда (кнопка сверху)"/>
+  <key id="about4v" value="из оффицального дискорда"/>
   <key id="about5v" value="Ваша версия игры"/>
   <key id="about6v" value="Целевая версия"/>
 
