--- a/KN_Core/Resources/Locale/jp.xml
+++ b/KN_Core/Resources/Locale/jp.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <locale loc="jp" author="Allicy">
   <!--MODS (TABS)-->
+  <key id="lights" value="ライト"/>
   <key id="visuals" value="ビジュアル"/>
   <key id="settings" value="セッティング"/>
   <key id="maps" value="マップ"/>
