fixed ru locale

--- a/KN_Core/Resources/Locale/ru.xml
+++ b/KN_Core/Resources/Locale/ru.xml
@@ -23,7 +23,7 @@
   <key id="close" value="ЗАКРЫТЬ"/>
 
   <!--CORE-->
-  <key id="input_locked" value="УПРАВЛЕНИЕ ЗАБЛОКИРОВАНО. ЗАКРОЙ МЕНЮ МОДА, ЧТОБЫ РАЗБЛОКИРОВАТЬ УПРАВЛЕНИЕ."/>
+  <key id="input_locked" value="УПРАВЛЕНИЕ ИГРОЙ ЗАБЛОКИРОВАНО ПОКА ОТКРЫТО МЕНЮ МОДА"/>
   <key id="changes" value="ИЗМЕНЕНИЯ"/>
   <key id="outdated0" value="МОД УСТАРЕЛ. СВЕЖАЯ ВЕРИЯ"/>
   <key id="outdated1" value="ПЕРЕЗАПУСТИТЕ ИГРУ ДЛЯ АВТОМАТИЧЕСКОГО ОБНОВЛЕНИЯ."/>
