--- a/KN_Core/Resources/Locale/ita.xml
+++ b/KN_Core/Resources/Locale/ita.xml
@@ -29,7 +29,7 @@
   <key id="high" value="ALTO"/>
 
   <!--CORE-->
-  <key id="input_locked" value="GLI INPUT DI GIOCO SONO BLOCCATI. CHIUDI IL MENU DELLA MOD PER SBLOCCARLO."/>
+  <key id="input_locked" value="GLI INPUT DI GIOCO SONO BLOCCATI MENTRE IL MENU DELLA MOD È APERTO"/>
   <key id="changes" value="CRONOLOGIA MODIFICHE"/>
   <key id="outdated0" value="LA TUA MOD È OBSOLETA, ULTIMA VERSIONE"/>
   <key id="outdated1" value="RIAVVIA IL GIOCO PER FAR AGGIORNARE LA MOD AUTOMATICAMENTE."/>
