updated supperters list and about tab

--- a/KN_Core/Resources/Locale/fr.xml
+++ b/KN_Core/Resources/Locale/fr.xml
@@ -49,9 +49,8 @@
   <key id="about3" value="s'il vous plaît, contactez-nous"/>
   <key id="about4" value="trbflxr#8814 ou John Sawyer#6915"/>
   <key id="about5" value="ou sur le discord du mod"/>
-  <key id="about6" value="Merci également à"/>
-  <key id="about7" value="pour leur soutien!"/>
-  <key id="about8" value="Mod traduit par:"/>
+  <key id="about6" value="Merci beaucoup à nos donateurs:"/>
+  <key id="about7" value="Mod traduit par:"/>
   <key id="about0v" value="Votre version client ou mod CarX sont différente!"/>
   <key id="about1v" value="Redémarrez le jeu pour que le mod se mette à jour automatiquement."/>
   <key id="about2v" value="Si vous voyez toujours ce message après le redémarrage,"/>
