--- a/KN_Core/Resources/Locale/en.xml
+++ b/KN_Core/Resources/Locale/en.xml
@@ -49,9 +49,8 @@
   <key id="about3" value="please, contact us at"/>
   <key id="about4" value="trbflxr#8814 or John Sawyer#6915"/>
   <key id="about5" value="or in the mod's discord"/>
-  <key id="about6" value="Also many thanks to"/>
-  <key id="about7" value="for their support!"/>
-  <key id="about8" value="Mod translated by:"/>
+  <key id="about6" value="Thanks a lot to our supporters:"/>
+  <key id="about7" value="Mod translated by:"/>
   <key id="about0v" value="Your CarX client or mod version is different!"/>
   <key id="about1v" value="Restart the game for the mod to update automatically."/>
   <key id="about2v" value="If you still see this message after the restart then"/>
