--- a/KN_Core/Resources/Locale/ru.xml
+++ b/KN_Core/Resources/Locale/ru.xml
@@ -49,9 +49,8 @@
   <key id="about3" value="пожалуйства свяжитесь с нами"/>
   <key id="about4" value="trbflxr#8814 или John Sawyer#6915"/>
   <key id="about5" value="или в дискорде мода"/>
-  <key id="about6" value="Так же большое спасибо игрокам"/>
-  <key id="about7" value="за их поддержку!"/>
-  <key id="about8" value="Мод перевели:"/>
+  <key id="about6" value="Спасибо большое нашим саппортерам:"/>
+  <key id="about7" value="Мод перевели:"/>
   <key id="about0v" value="Ваша версия игры не соответсвует версии мода!"/>
   <key id="about1v" value="Перезапустите игру для автоматического обновления."/>
   <key id="about2v" value="Если вы все еще видите это сообщение после перезапуска,"/>
