--- a/KN_Core/Resources/Locale/jp.xml
+++ b/KN_Core/Resources/Locale/jp.xml
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <locale loc="jp" author="Allicy">
   <!--MODS (TABS)-->
+  <key id="car_lights" value="カーライト"/>
+  <key id="world_lights" value="ワールドライティング"/>
   <key id="visuals" value="ビジュアル"/>
   <key id="settings" value="セッティング"/>
   <key id="maps" value="マップ"/>
   <key id="about" value="概要"/>
+  <key id="extras" value="エキストラ"/>
 
   <!--COMMON-->
   <key id="language" value="言語"/>
@@ -18,6 +21,12 @@
   <key id="blue" value="ブルー"/>
   <key id="alpha" value="アルファ"/>
   <key id="close" value="閉じる"/>
+  <key id="reload" value="再読込み"/>
+  <key id="front" value="前"/>
+  <key id="rear" value="後"/>
+  <key id="low" value="低"/>
+  <key id="medium" value="中"/>
+  <key id="high" value="高"/>
 
   <!--CORE-->
   <key id="input_locked" value="CARXの操作がロックされています MODメニューを閉じるとロックが解除されます"/>
@@ -40,9 +49,8 @@
   <key id="about3" value="私たちに連絡してください"/>
   <key id="about4" value="trbflxr#8814 or John Sawyer#6915"/>
   <key id="about5" value="または mod のディスコード から連絡してください"/>
-  <key id="about6" value="以下の方々にも感謝しています"/>
-  <key id="about7" value=" "/>
-  <key id="about8" value="翻訳者 by:"/>
+  <key id="about6" value="応援してくださった方々、本当にありがとうございました。"/>
+  <key id="about7" value="翻訳者 by:"/>
   <key id="about0v" value="お使いのCarXクライアントもしくはMODのバージョンが違います!"/>
   <key id="about1v" value="MODが自動的に更新されるようゲームを再起動してください。"/>
   <key id="about2v" value="再起動してもこのメッセージが表示される場合は"/>
@@ -69,7 +77,7 @@
   <!--ENGINES-->
   <key id="swaps_engines" value="エンジン"/>
   <key id="swaps_turbo" value="ターボ"/>
-  <key id="swaps_fd" value="ファイナル"/>
+  <key id="swaps_fd" value="ファイナルドライブ"/>
 
   <!--VISUALS-->
   <key id="zoom" value="ズーム"/>
@@ -93,6 +101,11 @@
   <key id="tl_brightness" value="テールライトの明るさ"/>
   <key id="add_lights_all" value="全員にライトを追加"/>
   <key id="add_lights_to" value="個別にライトを追加"/>
+  <key id="remove_all_lights" value="全てのライトを取り外す"/>
+  <key id="dash_enabled" value="ダッシュボードライトを有効"/>
+  <key id="dash_color" value="ダッシュボードライト色"/>
+  <key id="hazard_lights" value="ハザードランプ"/>
+  <key id="lights_quality" value="ライト品質"/>
 
   <!--WORLD LIGHTS-->
   <key id="fog" value="霧"/>
@@ -103,4 +116,12 @@
   <key id="ambient" value="環境光"/>
   <key id="color_temp" value="色温度"/>
   <key id="reset_all" value="全てをリセット"/>
+
+  <!--EXTRAS-->
+  <key id="f_tire_pressure" value="前タイヤ空気圧"/>
+  <key id="r_tire_pressure" value="後タイヤ空気圧"/>
+  <key id="reload_tag" value="ネームタグを再読込み"/>
+  <key id="use_tag" value="ネームタグを使用"/>
+  <key id="tag_front" value="前のネームタグ"/>
+  <key id="tag_back" value="後のネームタグ"/>
 </locale>
