--- a/KN_Core/Resources/Locale/nl.xml
+++ b/KN_Core/Resources/Locale/nl.xml
@@ -49,9 +49,8 @@
   <key id="about3" value="Contacteer ons dan aub op"/>
   <key id="about4" value="trbflxr#8814 of John Sawyer#6915"/>
   <key id="about5" value="Of in de mods discord"/>
-  <key id="about6" value="Trouwens"/>
-  <key id="about7" value="heel erg bedankt voor de hulp!"/>
-  <key id="about8" value="Mod vertaald door:"/>
+  <key id="about6" value="<SUPPORTERS:>"/>
+  <key id="about7" value="Mod vertaald door:"/>
   <key id="about0v" value="Uw CarX client versie is anders!"/>
   <key id="about1v" value="Herstart het spel zodat de mod zich automatisch kan updaten."/>
   <key id="about2v" value="Als u did bericht nog steeds ziet na het heropstarten"/>
@@ -119,8 +118,8 @@
   <key id="reset_all" value="RESET ALLES"/>
 
   <!--EXTRAS-->
-  <key id="f_tyre_pressure" value="VOORWIEL DRUK"/>
-  <key id="r_tyre_pressure" value="ACHTERWIEL DRUK"/>
+  <key id="f_tire_pressure" value="VOORWIEL DRUK"/>
+  <key id="r_tire_pressure" value="ACHTERWIEL DRUK"/>
   <key id="reload_tag" value="HERLAAD NAME TAG"/>
   <key id="use_tag" value="GEBRUIK NAME TAG"/>
   <key id="tag_front" value="TAG VOOR DE NAAM"/>
