--- a/KN_Core/Resources/Locale/nl.xml
+++ b/KN_Core/Resources/Locale/nl.xml
@@ -49,7 +49,7 @@
   <key id="about3" value="Contacteer ons dan aub op"/>
   <key id="about4" value="trbflxr#8814 of John Sawyer#6915"/>
   <key id="about5" value="Of in de mods discord"/>
-  <key id="about6" value="<SUPPORTERS:>"/>
+  <key id="about6" value="SUPPORTERS:"/>
   <key id="about7" value="Mod vertaald door:"/>
   <key id="about0v" value="Uw CarX client versie is anders!"/>
   <key id="about1v" value="Herstart het spel zodat de mod zich automatisch kan updaten."/>
