--- a/KN_Core/Resources/Locale/en.xml
+++ b/KN_Core/Resources/Locale/en.xml
@@ -29,7 +29,7 @@
   <key id="high" value="HIGH"/>
 
   <!--CORE-->
-  <key id="input_locked" value="GAME CONTROLLS ARE LOCKED WHILE THE MOD MENU IS UP"/>
+  <key id="input_locked" value="GAME CONTROLS ARE LOCKED WHILE THE MOD MENU IS UP"/>
   <key id="changes" value="CHANGELOG"/>
   <key id="outdated0" value="YOUR MOD IS OUTDATED, LATEST VERSION"/>
   <key id="outdated1" value="RESTART THE GAME FOR THE MOD TO UPDATE AUTOMATICALLY."/>
